# commitgremlin

./: README.md  config.example.json  dot-gitignore  pyproject.toml
commitgremlin/: __init__.py  build_hook.py  cli.py  tracker.py  utils.py
tests/: test_activity.py
